--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>bed-tools-j</artifactId>
   <name>bed-tools-j</name>
-  <version>2</version>
+  <version>2.1-SNAPSHOT</version>
   <inceptionYear>2017</inceptionYear>
   <description>Tools for BED files</description>
   <licenses>
